box shadow -> border

--- a/webapp/app/assets/stylesheets/layout.css.sass
+++ b/webapp/app/assets/stylesheets/layout.css.sass
@@ -11,7 +11,8 @@ h1
 .content
   background-color: white
   padding: 20px
-  @include box-shadow(darken($background, 20%) 1px 1px 3px)
+  border: solid 1px darken($background, 5%)
+  // @include box-shadow(darken($background, 20%) 1px 1px 3px)
   @include border-radius(5px 5px)
 
 .avatar
