--- a/webapp/app/views/layouts/_flash.html.haml
+++ b/webapp/app/views/layouts/_flash.html.haml
@@ -1,3 +1,4 @@
 - flash.each do |key, value|
-  .alert{:class => bootstrap_flash_class(key)}
+  .alert.fade.in{:class => bootstrap_flash_class(key)}
+    %a{:class => "close", :"data-dismiss" => "alert"} &times;
     %strong= value
