--- a/webapp/app/views/devise/show_profile.html.haml
+++ b/webapp/app/views/devise/show_profile.html.haml
@@ -1,4 +1,24 @@
 %h1 Profile 
+
+%h3 Gravatar :
+= gravatar_for @user
+
+%h3 Username :
 %p= current_user.email 
+
+%h3 Fullname :
 %p= current_user.fullname
+
+%h3 Description :
 %p= current_user.description
+
+-if current_user == @user
+  = link_to "Edit profile", edit_profile_path, :class => "btn info"
+
+%h3 Microblogs:
+%table{ :style => "width: 300px;"}
+  - @user.blogs.each do |blog|
+    %tr
+      %td= blog.blog_title
+      %td= link_to 'Show', blog, :class => "btn primary"
+
