Updating location almost works

--- a/webapp/app/views/pages/home.html.haml
+++ b/webapp/app/views/pages/home.html.haml
@@ -6,7 +6,6 @@
   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer rhoncus
   dictum leo sit amet mattis. Ut quis neque nisi, a ultrices purus. Nullam
   blandit risus bibendum odio tincidunt ut posuere lectus elementum.
-
-#fractal
+#fractal{:data => current_user_hash}
 
 
