--- a/webapp/app/views/home/index.html.haml
+++ b/webapp/app/views/home/index.html.haml
@@ -14,5 +14,12 @@
             %td{:class => "sidebar-table"}= link_to 'Destroy', blog, :confirm => 'Are you sure?', :method => :delete, :class => "btn danger"
   .span7
     .content
-      %h1 Home#index
-      %p Find me in app/views/home/index.html.haml
+      %table
+        - @feeds.each do |feed|
+          %tr
+            %td= feed.user.email
+            %td= feed.blog.blog_title
+            %td= feed.created_at
+          %tr
+            %td= feed.content
+
