--- a/app/views/devise/show_profile.html.haml
+++ b/app/views/devise/show_profile.html.haml
@@ -20,6 +20,7 @@
 
 -if current_user == @user
   = link_to "Edit profile", edit_profile_path, :class => "btn info"
+  = link_to 'Delete user', delte_profile_path, :confirm => 'Are you sure?', :method => :delete, :class => "btn danger"
 
 %h3 Microblogs:
 %table{ :style => "width: 300px;"}
