--- a/app/views/blogs/show.html.haml
+++ b/app/views/blogs/show.html.haml
@@ -8,7 +8,7 @@
   .addbtn {
     position : realtive !important;
     float : right !important;
-    margin-right : 8px; 
+    margin-right : 8px;
   }
 
 .row-fluid
@@ -16,10 +16,10 @@
     .well.sidebar-nav
       %h3 Blog title:
       %p= @blog.blog_title
-      
+
       %h3 Description:
       %p= @blog.description
-      
+
       %h3 User:
       = link_to gravatar_for(@blog.user), profile_path
 
@@ -35,7 +35,7 @@
       - if @blog.user == current_user
         %h3 Actions
         = link_to 'Edit', edit_blog_path(@blog), :class => "btn info"
-      
+
   .span8
     .content
       %p#notice= notice
@@ -45,7 +45,7 @@
           = simple_form_for @new_post, :url => blog_posts_path(@blog) do |f|
             %fieldset
               = f.input :content, :as => :text, :required => false, :label => ''
-              = f.submit "Add post", :class => "addbtn btn success"
+              = f.submit "Add post"
 
       %h2 Posts
       - @blog.posts.each do |post|
@@ -54,4 +54,4 @@
           - if @blog.user == current_user
             = link_to 'Delete', blog_post_path(@blog, post), :confirm => 'Are you sure?', :method => :delete, :class => "btn danger"
           %hr
- 
+
