--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -1,3 +1,54 @@
 // Place all the styles related to the Home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#container { width: 800px; padding: 20px; }
+html, body {
+  background-color: #eee;
+}
+
+body {
+  padding-top: 40px;
+}
+
+.container > footer p {
+  text-align: center;
+}
+
+.container {
+  width: 820px;
+}
+
+.content {
+  background-color: #fff;
+  padding: 20px;
+  margin: 0 -20px;
+  -webkit-border-radius: 0 0 6px 6px;
+  -moz-border-radius: 0 0 6px 6px;
+  border-radius: 0 0 6px 6px;
+  -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.15);
+  -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15);
+  box-shadow: 0 1px 2px rgba(0,0,0,.15);
+}
+
+.header-text{
+  font-size : 15px;
+  color : #fff;
+  padding: 8px 20px 12px;
+}
+
+.actions{
+  background : #fff;
+  border : none;
+  width : 650px;
+}
+
+tr.success .txt {
+  text-decoration: line-through;
+}
+
+.table-width {
+  width : 820px;
+}
+
+
