DRY: moving CSS from layouts to SCSS files

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -51,4 +51,26 @@ tr.success .txt {
   width : 820px;
 }
 
+.sidebar-nav{
+  margin-right: 10px;
+}
 
+.wall-container {
+  width: 900px;
+}
+
+.sidebar-table {
+  border:0 !important;
+}
+
+.new-blog {
+  width: 140px;
+  margin-left: auto;
+  margin-right: auto;
+  position: inline;
+}
+
+label, input, textarea {
+  margin-left: 0px;
+  margin: 0px;
+}
