--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -71,11 +71,24 @@ tr.success .txt {
 }
 
 label {
-  margin-left: -85px;
+  float : none;
+}
+
+input {
+  height : 25px;
+}
+
+textarea {
+  height : 150px; 
 }
 
 #post_content {
   width: 530px;
   height: 80px;
   margin-bottom: 5px;
+}
+
+
+.add-post {
+  float : right !important;
 }
