--- a/app/views/blogs/_form.html.haml
+++ b/app/views/blogs/_form.html.haml
@@ -1,6 +1,6 @@
 = simple_form_for @blog do |f|
   .inputs
     = f.input :blog_title
-    = f.input :description
+    = f.input :description, :as => :text
   .actions
     = f.button :submit, 'Save'
