--- a/webapp/app/views/pages/home.html.haml
+++ b/webapp/app/views/pages/home.html.haml
@@ -10,16 +10,17 @@
 .fractals
   / %label Kind
   %select#kind
-    %option{:value => "mandelbrot"} Mandelbrot
-    %option{:value => "julia"} Julia
+    - ["mandelbrot", "julia"].each do |q|
+      %option{:value => q, :selected => (q==@kind ? "selected" : nil)}= q.capitalize
+
   / %label Iterations
   %select#iter
     - [10, 100, 1000, 10000].each do |q|
-      %option{:value => q, :selected => (q==1000 ? "selected" : nil)}= q
+      %option{:value => q, :selected => (q==@iter ? "selected" : nil)}= q
   / %label Tile size
   %select#size
     - [32, 64, 128, 256].each do |s|
-      %option{:value => s, :selected => (s==256 ? "selected" : nil)}= "#{s}x#{s}"
+      %option{:value => s, :selected => (s==@size ? "selected" : nil)}= "#{s}x#{s}"
   %button.btn.btn-primary#render Render
 
 
