--- a/app/views/blogs/index.html.haml
+++ b/app/views/blogs/index.html.haml
@@ -11,7 +11,7 @@
 
   - @blogs.each do |blog|
     %tr
-      %td= blog.blog_title
+      %td= blog.title
       %td= blog.description
       %td= blog.user_id
       %td= link_to 'Show', blog
