--- a/app/views/blogs/show.html.haml
+++ b/app/views/blogs/show.html.haml
@@ -2,7 +2,7 @@
   .span4
     .well.sidebar-nav
       %h3 Blog title:
-      %p= @blog.blog_title
+      %p= @blog.title
 
       %h3 Description:
       %p= @blog.description
