--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,19 +7,7 @@
     = csrf_meta_tags
 
 %body
-  .topbar
-    .fill
-      .container
-        %ul.nav
-          %li= link_to "Microblogs", root_path, :class => "brand"
-          %li= link_to "About", about_path
-          %li= link_to "Help", help_path
-          %li= link_to "Contact", contact_path
-        .pull-right.header-text
-          - if signed_in?
-            Hello
-            = link_to current_user.email, profile_path(current_user), :method => :get, :class => "profile_link"
-            = link_to "Logout", destroy_user_session_path , :method => :delete
+  = render "layouts/topbar"
 
   .container
     .content
