--- a/app/assets/stylesheets/blogs.css.scss
+++ b/app/assets/stylesheets/blogs.css.scss
@@ -1,3 +1,44 @@
-// Place all the styles related to the Blogs controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.blog-public {
+  display : none;
+}
+
+.profile-display {
+  display: inline-block;
+  float : left;
+  width : 400px;
+}
+
+.properties-display {
+  display: inline;
+  float : left;
+  width : 195px;
+}
+.prop-followers{
+  width : 200px;
+  margin-left : auto;
+  margin-right : auto;
+}
+
+#prop{
+  width : 390px;
+  height : 130px;
+  border:0px;
+  border-radius:5px;
+  -moz-border-radius:5px; /* Firefox 3.6 and earlier */
+  padding-left : 5px;
+}
+
+#prop-profile{
+  height : 50px !important;
+}
+
+.blog-title-cell {
+  font-size : 15px !important;
+}
+
+.new-blog {
+  width: 80px;
+  margin-left: auto;
+  margin-right: auto;
+  position: inline;
+}
