--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -63,13 +63,6 @@ tr.success .txt {
   border:0 !important;
 }
 
-.new-blog {
-  width: 140px;
-  margin-left: auto;
-  margin-right: auto;
-  position: inline;
-}
-
 label {
   float : none;
 }
@@ -88,7 +81,10 @@ textarea {
   margin-bottom: 5px;
 }
 
-
 .add-post {
   float : right !important;
+}
+
+.control-group {
+  margin-bottom: 10px;
 }
