--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -93,3 +93,17 @@ textarea {
   width : 150px;
 
 }
+
+.feed-bottom {
+  text-align : right;
+}
+
+.feed-content {
+  font-size : 19px !important;
+  margin-bottom : 10px;
+}
+
+.feed-main {
+  margin-top : 20px;
+  border-bottom : 1px solid;
+}
