--- a/app/views/devise/_unfollow.html.haml
+++ b/app/views/devise/_unfollow.html.haml
@@ -1,2 +1,2 @@
-= simple_form_for(current_user.relationships.find_by_followed_id(@blog.user), :html => { :method => :delete }) do |f|
+= simple_form_for(current_user.relationships.find_by_followed_id(@user), :html => { :method => :delete }, :remote => :true) do |f|
   = f.submit "Unfollow", :class => "btn primary"
