--- a/app/views/blogs/_author.html.haml
+++ b/app/views/blogs/_author.html.haml
@@ -2,7 +2,7 @@
   .author-gravatar
     = link_to gravatar_for(@blog.user), profile_path(@blog.user)
   .author-name
-    - if @blog.user.fullname != ''
+    - if !@blog.user.fullname.nil? && !@blog.user.fullname.empty?
       = link_to @blog.user.fullname, profile_path(@blog.user)
-    -else 
+    - else 
       = link_to @blog.user.email, profile_path(@blog.user)
