--- a/webapp/app/assets/stylesheets/layout.css.sass
+++ b/webapp/app/assets/stylesheets/layout.css.sass
@@ -1,4 +1,5 @@
 $background: #eee
+$foreground: white
 
 body
   padding-top: 60px
@@ -9,9 +10,9 @@ h1
   margin-bottom: 10px
 
 .content
-  background-color: white
+  background-color: $foreground
   padding: 20px
-  border: solid 1px darken($background, 5%)
+  border: solid 1px darken($background, 10%)
   @include border-radius(5px 5px)
 
 .avatar
@@ -21,6 +22,19 @@ h1
   @include border-radius(2px 2px)
 
 #fractal
+  margin-top: 15px
   height: 400px
 
+#settings
+  display: none
+  margin-left: -20px
+  margin-right: -20px
+  padding-left: 20px
+  padding-right: 20px
+  background-color: darken($foreground, 10%)
+  border-top:    solid 1px darken($background, 10%)
+  border-bottom: solid 1px darken($background, 10%)
+
+#hide-settings
+  display: none
 
