add displaying all blogs, discussions and users

--- a/app/views/devise/show_follow.html.haml
+++ b/app/views/devise/show_follow.html.haml
@@ -17,4 +17,4 @@
               = link_to us.email, profile_path(us)
         %td  
           - @user = us
-          = render "follow_form"
+          = render "devise/follow_form"
