--- a/app/views/layouts/_topbar.html.haml
+++ b/app/views/layouts/_topbar.html.haml
@@ -9,6 +9,8 @@
         %li= link_to "About", about_path
         %li= link_to "Help", help_path
         %li= link_to "Contact", contact_path
+        %li= link_to "Blogs", blogs_path
+        %li= link_to "Users", userlist_path
       - if signed_in?    
         .pull-right.header-text
           Hello
