--- a/app/views/devise/_follow_form.html.haml
+++ b/app/views/devise/_follow_form.html.haml
@@ -1,4 +1,4 @@
-#follow-form{ :class => "follow-form-#{@user.id}" }
+#follow{ :class => "follow-form-#{@user.id}" }
   -if current_user != @user
     -if current_user.following?(@user) 
       =render 'devise/unfollow'
